# Focus-Proposal-Writer

./: Dockerfile  docker-compose.portainer.yaml  docker-compose.yaml  issue.txt  main.py  main.py.bak  pyproject.toml  session_state.json  technical_solution.py
src/: coordinator.py  origin_main.py
src/agents/: classification.py  document_extraction.py  industry_analysis.py  pricing.py  technical_solution.py  timeline.py  tone_style.py  user_feedback.py
src/legacy_code/: main3.py  main4.py  orginal_main.py
