[tool.poetry]
name = "scraping-insights"
version = "0.1.0"
description = "a focuskpi scraping-insights project"
authors = ["Hao Zhang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
cookiecutter = "^2.6.0"
streamlit = "^1.42.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.38"
openai = "^1.61.1"
googlesearch-python = "^1.3.0"
pymupdf = "^1.25.3"
beautifulsoup4 = "^4.13.3"
python-docx = "^1.1.2"
docx2txt = "^0.8"
duckduckgo-search = "^7.4.4"
spacy = "^3.8.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
flake8 = "^7.1.1"
isort = "^5.13.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", "build", "dist", "src/__init__.py"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]